--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "deploy": "npm run build && gh-pages -d out"
   },
   "dependencies": {
     "next": "^14.2.3",
@@ -20,11 +19,12 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.22",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.2.3",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.1",
+    "gh-pages": "^6.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5.4.3"
   }
 }
